--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,15 +1,15 @@
-set -g default-terminal "xterm-256color"
-set-option -g default-terminal "tmux-256color"
-set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set-option -ga terminal-features ",xterm-256color:usstyle"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
-run './plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 
 unbind C-b
 
