hide all workspace

--- a/i3/workspaces.conf
+++ b/i3/workspaces.conf
@@ -3,8 +3,6 @@ set $sm HDMI-0
 #
 # display workspace on which monitor
 workspace 1 output $pm
-workspace 10 output $sm
-
 workspace 2 output $pm
 workspace 3 output $pm
 workspace 4 output $pm
@@ -14,6 +12,10 @@ workspace 6 output $sm
 workspace 7 output $sm
 workspace 8 output $sm
 workspace 9 output $sm
+workspace 10 output $sm
+
+workspace 100 output $pm
+workspace 101 output $sm
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -55,6 +57,9 @@ bindsym $mod+Shift+0 move container to workspace number $ws10; workspace $ws10
 # move  workspaces between monitors
 bindsym $mod+Control+p move workspace to output $pm
 bindsym $mod+Control+s move workspace to output $sm
+
+# hide all
+bindsym Mod4+d workspace 100; workspace 101
 
 # Ensure workspace 0 is on the secondary monitor (HDMI-0) on startup
 exec_always --no-startup-id i3-msg "workspace 10; move workspace to output $sm"
