--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -19,8 +19,8 @@ for_window [class="Google-chrome" title="Yahoo Mail - Google Chrome"] move to wo
 for_window [class="Google-chrome" title="Outlook - Google Chrome"] move to workspace 3
 
 # Workspace 10: Secondary
-exec_always --no-startup-id google-chrome http://secondary/
-exec_always --no-startup-id Alacritty
+exec_always --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
+exec_always --no-startup-id alacritty --title "secondary"
 
-for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10; move position up
-for_window [class="Alacritty"] move to workspace 10
+for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10; move container to up
+for_window [class="Alacritty" title="secondary"] move to workspace 10
