workspace 10 startup now working properly

--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,9 +1,10 @@
-# Workspace 1: Main
-# exec_always --no-startup-id alacritty
-# exec_always --no-startup-id google-chrome google.com http://primary/
+# # Workspace 1: Main
+# exec_always --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
+# exec_always --no-startup-id alacritty --title "primary"
 #
-# for_window [class="Alacritty"] move to workspace 1; resize set width 800px; move container to right
-# for_window [class="Google-chrome" title="primary - Google Chrome"] move to workspace 1
+# for_window [class="Google-chrome" title="primary - Google Chrome"] move to workspace 1 
+# #; move container to left
+# for_window [class="Alacritty" title="primary"] move to workspace 1
 
 # Workspace 2: Spotify
 exec --no-startup-id spotify
@@ -19,8 +20,9 @@ for_window [class="Google-chrome" title="Yahoo Mail - Google Chrome"] move to wo
 for_window [class="Google-chrome" title="Outlook - Google Chrome"] move to workspace 3
 
 # Workspace 10: Secondary
-exec_always --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec_always --no-startup-id alacritty --title "secondary"
+exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
+exec --no-startup-id alacritty --title "secondary"
 
-for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10; move container to up
-for_window [class="Alacritty" title="secondary"] move to workspace 10
+for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10
+exec --no-startup-id ~/.config/i3/move.sh
+
