--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -11,13 +11,8 @@ exec --no-startup-id spotify
 assign [class="Spotify"] workspace 2
 
 # Workspace 3: Email Clients in Chrome
-exec --no-startup-id google-chrome --new-window https://mail.google.com/mail/u/0/#inbox
-exec --no-startup-id google-chrome --new-window https://mail.yahoo.com/d/folders/1
-exec --no-startup-id google-chrome --new-window https://outlook.office365.com/mail/
-
-for_window [class="Google-chrome" title="Gmail - Google Chrome"] move to workspace 3
-for_window [class="Google-chrome" title="Yahoo Mail - Google Chrome"] move to workspace 3
-for_window [class="Google-chrome" title="Outlook - Google Chrome"] move to workspace 3
+exec --no-startup-id thunderbird
+assign [class="thunderbird"] workspace 3
 
 # Workspace 10: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
