--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,10 +1,8 @@
-# # Workspace 1: Main
-# exec_always --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
-# exec_always --no-startup-id alacritty --title "primary"
-#
-# for_window [class="Google-chrome" title="primary - Google Chrome"] move to workspace 1 
-# #; move container to left
-# for_window [class="Alacritty" title="primary"] move to workspace 1
+# Workspace 1: Main
+exec --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
+exec --no-startup-id alacritty --title "primary" --command tmux
+
+for_window [class="Alacritty" title="primary"] move to workspace 1; resize set width 1600px
 
 # Workspace 2: Spotify
 exec --no-startup-id spotify
@@ -16,8 +14,9 @@ assign [class="thunderbird"] workspace 3
 
 # Workspace 10: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec --no-startup-id alacritty --title "secondary"
+exec --no-startup-id alacritty --title "secondary" --command btop
 
 for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10
-exec --no-startup-id ~/.config/i3/move.sh
+
+exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement.sh
 
