--- a/i3/workspaces.conf
+++ b/i3/workspaces.conf
@@ -7,10 +7,10 @@ workspace 2 output $pm
 workspace 3 output $pm
 workspace 4 output $pm
 workspace 5 output $pm
+workspace 6 output $pm
+workspace 7 output $pm
+workspace 8 output $pm
 
-workspace 6 output $sm
-workspace 7 output $sm
-workspace 8 output $sm
 workspace 9 output $sm
 workspace 10 output $sm
 
