--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -2,15 +2,25 @@
 exec --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
 exec --no-startup-id alacritty --title "primary" --command tmux
 
-for_window [class="Alacritty" title="primary"] move to workspace 1; resize set width 1600px
+for_window [class="Alacritty" title="primary"] move to workspace 1
 
-# Workspace 2: Spotify
-exec --no-startup-id spotify
-assign [class="Spotify"] workspace 2
-
-# Workspace 3: Email Clients in Chrome
+# Workspace 2: Email Clients in Chrome
 exec --no-startup-id thunderbird
-assign [class="thunderbird"] workspace 3
+assign [class="thunderbird"] workspace 2
+
+# Workspace 3: Spotify
+exec --no-startup-id spotify
+assign [class="Spotify"] workspace 3
+
+# Workspace 4: Games
+exec --no-startup-id steam
+exec --no-startup-id flatpak run com.usebottles.bottles
+
+assign [class="steam"] workspace 4
+assign [class="bottles"] workspace 4
+
+for_window [class="steam" title="Friends List"] floating enabled
+for_window [class="steam" title="Steam Settings"] floating enabled
 
 # Workspace 10: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
@@ -19,4 +29,3 @@ exec --no-startup-id alacritty --title "secondary" --command btop
 for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10
 
 exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement.sh
-
