added cava on spotify workspace

--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -10,7 +10,12 @@ assign [class="thunderbird"] workspace 2
 
 # Workspace 3: Spotify
 exec --no-startup-id spotify
+exec --no-startup-id alacritty --title "cava" --command cava
+
 assign [class="Spotify"] workspace 3
+
+for_window [class="Alacritty" title="cava"] move to workspace 3
+for_window [class="Spotify"] move container to left
 
 # Workspace 4: Games
 exec --no-startup-id steam
