--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,6 +1,6 @@
 # Workspace 1: Main
 exec --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
-exec --no-startup-id alacritty --title "primary" --command tmux
+exec --no-startup-id alacritty --title "primary" --command sh -c 'tmux; exec bash'
 
 for_window [class="Alacritty" title="primary"] move to workspace 1
 
@@ -10,7 +10,7 @@ assign [class="thunderbird"] workspace 2
 
 # Workspace 3: Spotify
 exec --no-startup-id spotify
-exec --no-startup-id alacritty --title "cava" --command cava
+exec --no-startup-id alacritty --title "cava" --command sh -c 'cava; exec bash'
 
 assign [class="Spotify"] workspace 3
 
@@ -19,18 +19,20 @@ for_window [class="Spotify"] move container to left
 
 # Workspace 4: Games
 exec --no-startup-id steam
-exec --no-startup-id flatpak run com.usebottles.bottles
-
 assign [class="steam"] workspace 4
-assign [class="bottles"] workspace 4
+
+# exec --no-startup-id flatpak run com.usebottles.bottles
+# assign [class="bottles"] workspace 4
 
 for_window [class="steam" title="Friends List"] floating enabled
 for_window [class="steam" title="Steam Settings"] floating enabled
 
 # Workspace 10: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec --no-startup-id alacritty --title "secondary" --command btop
+exec --no-startup-id alacritty --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id discord
 
+assign [class="discord"] workspace 10
 for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10
 
 exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement.sh
