--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,15 +1,24 @@
-set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -g default-terminal "screen-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
-# set -g @plugin 'christoomey/vim-tmux-navigator'
 
-run '~/.tmux/plugins/tpm/tpm'
+# theme
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+run '~/.config/tmux/plugins/tpm/tpm'
 
 unbind C-b
 
@@ -17,5 +26,3 @@ set-option -g prefix C-Space
 bind C-Space send-prefix
 
 bind-key -r f run-shell "~/bin/.local/scripts/tmux-sessionizer"
-
-
