--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,35 +1,33 @@
 # Workspace 1: Main
+exec --no-startup-id alacritty
+
+# Workspace 2: Terminal with Browser
 exec --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
-exec --no-startup-id alacritty --title "primary" --command sh -c 'tmux; exec bash'
+exec --no-startup-id alacritty --title "primary" 
 
-for_window [class="Alacritty" title="primary"] move to workspace 1
+for_window [class="Alacritty" title="primary"] move to workspace 2
 
-# Workspace 2: Email Clients in Chrome
+# Workspace 3: Email Clients in Chrome
 exec --no-startup-id thunderbird
-assign [class="thunderbird"] workspace 2
+assign [class="thunderbird"] workspace 3
 
-# Workspace 3: Spotify
+# Workspace 4: Spotify
 exec --no-startup-id spotify
 exec --no-startup-id alacritty --title "cava" --command sh -c 'cava; exec bash'
 
-assign [class="Spotify"] workspace 3
+assign [class="Spotify"] workspace 4
 
-for_window [class="Alacritty" title="cava"] move to workspace 3
-for_window [class="Spotify"] move container to left
+for_window [class="Alacritty" title="cava"] move to workspace 4
+for_window [class="Spotify"] move container to up
 
-# Workspace 4: Games
+# Workspace 5: Games
 exec --no-startup-id steam
-assign [class="steam"] workspace 4
-
-# exec --no-startup-id flatpak run com.usebottles.bottles
-# assign [class="bottles"] workspace 4
-
-for_window [class="steam" title="Friends List"] floating enabled
-for_window [class="steam" title="Steam Settings"] floating enabled
+assign [class="steam"] workspace 5
+assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
 # Workspace 10: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec --no-startup-id alacritty --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=11' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
 
 assign [class="discord"] workspace 10
