--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -4,8 +4,7 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_SINK
 bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_SINK@ toggle
 
 # start a terminal
-bindsym $mod+Return exec alacritty 
-# bindsym $mod+Return exec alacritty --command ~/.config/i3/start_tmux.sh
+bindsym $mod+Return exec ~/bin/.local/scripts/2nd_monitor_alacritty.sh 
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -96,3 +95,8 @@ bindsym $mod+g exec google-chrome
 # screen lock keybind
 bindsym Control+Mod1+l exec "i3lock -c 000000"
 
+# snip
+bindsym Mod4+Shift+s exec flameshot gui
+
+# clipboard history
+bindsym Mod4+v exec copyq show
