--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,8 @@
+# for wsl
 # set-option -g default-terminal "screen-256color"
 # set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
@@ -20,9 +22,33 @@ set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
-unbind C-b
+# enable scrolling
+set -g mouse on
+set -g history-limit 10000
 
+# tmux sessionizer
+bind-key -r f run-shell "~/bin/.local/scripts/tmux-sessionizer"
+
+# --- keybinding --- #
+
+# change prefix
+unbind C-b
 set-option -g prefix C-Space
 bind C-Space send-prefix
 
-bind-key -r f run-shell "~/bin/.local/scripts/tmux-sessionizer"
+# source tmux
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
+# vim keybindings
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# resize tmux with vim keybinding
+bind -n C-h resize-pane -L 5
+bind -n C-l resize-pane -R 5
+bind -n C-j resize-pane -D 5
+bind -n C-k resize-pane -U 5
+
