--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,10 @@
 include $HOME/.config/i3/workspaces.conf
 include $HOME/.config/i3/startup.conf
 include $HOME/.config/i3/remap.conf
+include $HOME/.config/i3/rose-pine.conf
+
+# xrandr for screens
+exec --no-startup-id xrandr --output DP-0 --primary --mode 2560x1440 --rate 144.00 --output HDMI-0 --mode 1920x1080 --rate 100.00 --rotate left 
 
 # set monitors
 set $pm DP-0
@@ -8,6 +12,19 @@ set $sm HDMI-0
 
 # set super key
 set $mod Mod1
+
+# start picom
+exec --no-startup-id picom
+
+# scale down monitor 2
+exec_always --no-startup-id xrandr --output $sm --dpi 90
+
+# remove title bar on window
+default_border pixel 1
+
+# set bg color
+# exec_always --no-startup-id ~/bin/.local/scripts/background.sh
+exec_always --no-startup-id feh --bg-scale --no-xinerama ~/Documents/background/space-aircraft.png
 
 # font 
 font pango:monospace 10
@@ -38,14 +55,11 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 # auto lock screen
 exec --no-startup-id xautolock -detectsleep -time 1800 -locker "i3lock -c 000000"
 
-# xrandr for screens
-exec --no-startup-id xrandr --output DP-0 --primary --mode 2560x1440 --rate 144.00 --output HDMI-0 --mode 1920x1080 --rate 100.00 --rotate left 
-
 # night light
 exec_always --no-startup-id redshift -O 3800 -P
 
-# set bg color
-exec_always --no-startup-id ~/bin/.local/scripts/background.sh
+# add gaps
+gaps inner 15
 
 # floating windows
 for_window [class="steam" title="Friends List"] floating enabled
@@ -61,5 +75,3 @@ for_window [class="copyq"] floating enabled
 for_window [class="org.gnome.clocks"] floating enabled
 for_window [class="gnome-calendar"] floating enabled
 
-# add gaps
-gaps inner 15
