--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -27,7 +27,7 @@ assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
 # Workspace 10: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec --no-startup-id alacritty -o 'font.size=11' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=11' -o 'window.opacity=0.7' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
 
 assign [class="discord"] workspace 10
