--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,5 @@
-# for wsl
-# set-option -g default-terminal "screen-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -a terminal-features "screen-256color"
+set-option -a terminal-overrides ",xterm-256color:Tc"
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -45,10 +44,3 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-
-# resize tmux with vim keybinding
-bind -n C-h resize-pane -L 5
-bind -n C-l resize-pane -R 5
-bind -n C-j resize-pane -D 5
-bind -n C-k resize-pane -U 5
-
