--- a/i3/workspaces.conf
+++ b/i3/workspaces.conf
@@ -7,15 +7,25 @@ workspace 5 output $pm
 workspace 6 output $pm
 workspace 7 output $pm
 workspace 8 output $pm
+workspace 9 output $pm
+workspace 10 output $pm
 
-workspace 9 output $sm
-workspace 10 output $sm
+workspace 11 output $sm
+workspace 12 output $sm
+workspace 13 output $sm
+workspace 14 output $sm
+workspace 15 output $sm
+workspace 16 output $sm
+workspace 17 output $sm
+workspace 18 output $sm
+workspace 19 output $sm
+workspace 20 output $sm
 
-workspace 100 output $pm
-workspace 101 output $sm
+workspace 0 output $pm
+workspace 21 output $sm
 
 # Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+set $ws0 "0"
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -26,6 +36,17 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+set $ws11 "11"
+set $ws12 "12"
+set $ws13 "13"
+set $ws14 "14"
+set $ws15 "15"
+set $ws16 "16"
+set $ws17 "17"
+set $ws18 "18"
+set $ws19 "19"
+set $ws20 "20"
+set $ws21 "21"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -39,6 +60,17 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
+bindsym $mod+Control+1 workspace number $ws11
+bindsym $mod+Control+2 workspace number $ws12
+bindsym $mod+Control+3 workspace number $ws13
+bindsym $mod+Control+4 workspace number $ws14
+bindsym $mod+Control+5 workspace number $ws15
+bindsym $mod+Control+6 workspace number $ws16
+bindsym $mod+Control+7 workspace number $ws17
+bindsym $mod+Control+8 workspace number $ws18
+bindsym $mod+Control+9 workspace number $ws19
+bindsym $mod+Control+0 workspace number $ws20
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1; workspace $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2; workspace $ws2
@@ -49,14 +81,22 @@ bindsym $mod+Shift+6 move container to workspace number $ws6; workspace $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8; workspace $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9; workspace $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10; workspace $ws10
+bindsym $mod+Shift+10 move container to workspace number $ws10; workspace $ws10
+
+bindsym $mod+Control'+Shift+1 move container to workspace number $ws11; workspace $ws11
+bindsym $mod+Control'+Shift+2 move container to workspace number $ws12; workspace $ws12
+bindsym $mod+Control'+Shift+3 move container to workspace number $ws13; workspace $ws13
+bindsym $mod+Control'+Shift+4 move container to workspace number $ws14; workspace $ws14
+bindsym $mod+Control'+Shift+5 move container to workspace number $ws15; workspace $ws15
+bindsym $mod+Control'+Shift+6 move container to workspace number $ws16; workspace $ws16
+bindsym $mod+Control'+Shift+7 move container to workspace number $ws17; workspace $ws17
+bindsym $mod+Control'+Shift+8 move container to workspace number $ws18; workspace $ws18
+bindsym $mod+Control'+Shift+9 move container to workspace number $ws19; workspace $ws19
+bindsym $mod+Control'+Shift+0 move container to workspace number $ws20; workspace $ws20
 
 # move  workspaces between monitors
 bindsym $mod+Control+p move workspace to output $pm
 bindsym $mod+Control+s move workspace to output $sm
 
-# hide all
-bindsym Mod4+d workspace 100; workspace 101
-
 # Ensure workspace 0 is on the secondary monitor (HDMI-0) on startup
-exec_always --no-startup-id i3-msg "workspace 10; move workspace to output $sm"
+exec_always --no-startup-id i3-msg "workspace 11; move workspace to output $sm"
