--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -4,7 +4,7 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_SINK
 bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_SINK@ toggle
 
 # start a terminal
-bindsym $mod+Return exec ~/bin/.local/scripts/2nd_monitor_alacritty.sh 
+bindsym $mod+Return exec ~/bin/.local/scripts/2nd-monitor-alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -100,3 +100,10 @@ bindsym Mod4+Shift+s exec flameshot gui
 
 # clipboard history
 bindsym Mod4+v exec copyq show
+
+# hide all
+bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
+
+# enable/disable picom
+bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
+
