--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -25,12 +25,12 @@ exec --no-startup-id steam
 assign [class="steam"] workspace 5
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
-# Workspace 10: Secondary
+# Workspace 11: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec --no-startup-id alacritty -o 'font.size=11' -o 'window.opacity=0.7' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.4' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
 
-assign [class="discord"] workspace 10
-for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 10
+assign [class="discord"] workspace 11
+for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 11
 
-exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement.sh
+exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement
