--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,13 +17,9 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
 
 run '~/.config/tmux/plugins/tpm/tpm'
-
-# enable scrolling
-set -g mouse on
-set -g history-limit 10000
 
 # tmux sessionizer
 bind-key -r f run-shell "~/bin/.local/scripts/tmux-sessionizer"
