--- a/i3/workspaces.conf
+++ b/i3/workspaces.conf
@@ -83,16 +83,16 @@ bindsym $mod+Shift+8 move container to workspace number $ws8; workspace $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9; workspace $ws9
 bindsym $mod+Shift+10 move container to workspace number $ws10; workspace $ws10
 
-bindsym $mod+Control'+Shift+1 move container to workspace number $ws11; workspace $ws11
-bindsym $mod+Control'+Shift+2 move container to workspace number $ws12; workspace $ws12
-bindsym $mod+Control'+Shift+3 move container to workspace number $ws13; workspace $ws13
-bindsym $mod+Control'+Shift+4 move container to workspace number $ws14; workspace $ws14
-bindsym $mod+Control'+Shift+5 move container to workspace number $ws15; workspace $ws15
-bindsym $mod+Control'+Shift+6 move container to workspace number $ws16; workspace $ws16
-bindsym $mod+Control'+Shift+7 move container to workspace number $ws17; workspace $ws17
-bindsym $mod+Control'+Shift+8 move container to workspace number $ws18; workspace $ws18
-bindsym $mod+Control'+Shift+9 move container to workspace number $ws19; workspace $ws19
-bindsym $mod+Control'+Shift+0 move container to workspace number $ws20; workspace $ws20
+bindsym $mod+Control+Shift+1 move container to workspace number $ws11; workspace $ws11
+bindsym $mod+Control+Shift+2 move container to workspace number $ws12; workspace $ws12
+bindsym $mod+Control+Shift+3 move container to workspace number $ws13; workspace $ws13
+bindsym $mod+Control+Shift+4 move container to workspace number $ws14; workspace $ws14
+bindsym $mod+Control+Shift+5 move container to workspace number $ws15; workspace $ws15
+bindsym $mod+Control+Shift+6 move container to workspace number $ws16; workspace $ws16
+bindsym $mod+Control+Shift+7 move container to workspace number $ws17; workspace $ws17
+bindsym $mod+Control+Shift+8 move container to workspace number $ws18; workspace $ws18
+bindsym $mod+Control+Shift+9 move container to workspace number $ws19; workspace $ws19
+bindsym $mod+Control+Shift+0 move container to workspace number $ws20; workspace $ws20
 
 # move  workspaces between monitors
 bindsym $mod+Control+p move workspace to output $pm
