--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -25,9 +25,13 @@ exec --no-startup-id steam
 assign [class="steam"] workspace 5
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
+# Workspace 10: Teams
+exec --no-startup-id google-chrome https://teams.microsoft.com/v2/ --new-window
+exec --no-startup-id google-chrome https://online.cdu.edu.au/ultra/course --new-window
+
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.4' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.7' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
 
 assign [class="discord"] workspace 11
