--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -37,10 +37,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+| split h
+bindsym $mod+u split h
 
 # split in vertical orientation
-bindsym $mod+\ split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -107,3 +107,5 @@ bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
 # enable/disable picom
 bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 
+# open nautilus
+bindsym $mod+n exec nautilus
