--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -22,18 +22,18 @@ opacity-rule = [
     "95:class_g = 'Google-chrome' && !focused",
     "85:class_g = 'discord' && !focused",
     "100:class_g = 'Alacritty'",
+    "100:class_g = 'i3lock'",
     "90:class_g = 'thunderbird' && !focused",
     "90:class_g = 'Spotify' && !focused",
     "95:class_g = 'Spotify' && focused",
     "85:class_g = 'steam' && !focused",
-    "90:class_g = 'steam' && focused",
-    "100:class_g = 'Google-chrome' && name = 'Messenger call - Google Chrome'"
+    "90:class_g = 'steam' && focused"
 ];
 
 # blur
 blur-background = true;
 blur-method = "dual_kawase";
-blur-strength = 3;
+blur-strength = 4;
 blur-background-exclude = [
   "window_type = 'menu'",
   "window_type = 'dropdown_menu'",
