made firefox my default browser

--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -89,8 +89,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# open google chrome
-bindsym $mod+g exec google-chrome
+# open firefox
+bindsym $mod+g exec firefox
 
 # screen lock keybind
 bindsym Control+Mod1+l exec "i3lock -c 000000 && sleep 60 && xset dpms force off"
