--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,11 +1,8 @@
 # Workspace 1: Main
-exec --no-startup-id alacritty
-
-# Workspace 2: Terminal with Browser
-exec --no-startup-id google-chrome --new-window ~/.config/i3/primary.html
 exec --no-startup-id alacritty --title "primary" 
 
-for_window [class="Alacritty" title="primary"] move to workspace 2
+# Workspace 2: Terminal with Browser
+exec --no-startup-id firefox --new-window google.com
 
 # Workspace 3: Email Clients in Chrome
 exec --no-startup-id thunderbird
@@ -25,16 +22,16 @@ exec --no-startup-id steam
 assign [class="steam"] workspace 5
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
-# Workspace 10: Teams
-exec --no-startup-id google-chrome https://teams.microsoft.com/v2/ --new-window
-exec --no-startup-id google-chrome https://online.cdu.edu.au/ultra/course --new-window
+# Workspace 10: Units
+exec --no-startup-id firefox --new-window https://online.cdu.edu.au/ultra/course 
 
 # Workspace 11: Secondary
-exec --no-startup-id google-chrome --new-window ~/.config/i3/secondary.html
+exec --no-startup-id google-chrome --new-window messenger.com
 exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.7' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
 
 assign [class="discord"] workspace 11
-for_window [class="Google-chrome" title="secondary - Google Chrome"] move to workspace 11
+
+for_window [class="Alacritty" title="secondary"] move to workspace 11
 
 exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement
