--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,9 @@ set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
+# vim mode
+set -g mode-keys vi
+
 # tmux sessionizer
 bind-key -r f run-shell "~/bin/.local/scripts/tmux-sessionizer"
 
