--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -93,7 +93,7 @@ bindsym $mod+r mode "resize"
 bindsym $mod+g exec firefox
 
 # screen lock keybind
-bindsym Control+Mod1+l exec "i3lock -c 000000 && sleep 60 && xset dpms force off"
+bindsym Control+Mod1+l exec ~/bin/.local/scripts/lock-screen
 
 # snip
 bindsym Mod4+Shift+s exec flameshot gui
