--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,3 +1,5 @@
+exec --no-startup-id alacritty --title "nvim" --command nvim
+
 # Workspace 1: Main
 exec --no-startup-id alacritty --title "primary" 
 
@@ -23,15 +25,14 @@ assign [class="steam"] workspace 5
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
 # Workspace 10: Units
-exec --no-startup-id firefox --new-window https://online.cdu.edu.au/ultra/course 
+exec --no-startup-id i3-msg 'exec firefox --new-window https://online.cdu.edu.au/ultra/course'
 
 # Workspace 11: Secondary
-exec --no-startup-id google-chrome --new-window messenger.com
+exec --no-startup-id google-chrome messenger.com --new-window 
 exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.7' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
 
 assign [class="discord"] workspace 11
-
 for_window [class="Alacritty" title="secondary"] move to workspace 11
 
 exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement
