--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,29 +14,41 @@ no-fading-openclose = false;
 
 # opacity
 inactive-opacity = 0.9;
-active-opacity = 1;
+active-opacity = 0.9;
 frame-opacity = 1;
 inactive-opacity-override = false;
 opacity-rule = [
-    "80:class_g = 'URxvt'",
-    "95:class_g = 'Google-chrome' && !focused",
-    "85:class_g = 'discord' && !focused",
+    "100:name = 'Messenger call - Google Chrome'",
+    "90:class_g = 'URxvt'",
+    "90:class_g = 'Google-chrome'",
+    "95:class_g = 'firefox'",
+    "90:class_g = 'discord'",
     "100:class_g = 'Alacritty'",
     "100:class_g = 'i3lock'",
-    "90:class_g = 'thunderbird' && !focused",
-    "90:class_g = 'Spotify' && !focused",
-    "95:class_g = 'Spotify' && focused",
-    "85:class_g = 'steam' && !focused",
-    "90:class_g = 'steam' && focused"
+    "90:class_g = 'thunderbird'",
+    "90:class_g = 'Spotify'",
+    "90:class_g = 'steam'"
 ];
 
-# blur
-blur-background = true;
-blur-method = "dual_kawase";
-blur-strength = 4;
-blur-background-exclude = [
-  "window_type = 'menu'",
-  "window_type = 'dropdown_menu'",
-  "window_type = 'popup_menu'",
-  "window_type = 'tooltip'"
-];
+# opacity-rule = [
+#     "80:class_g = 'URxvt'",
+#     "90:class_g = 'Google-chrome' && !focused",
+#     "90:class_g = 'firefox' && !focused",
+#     "85:class_g = 'discord' && !focused",
+#     "100:class_g = 'Alacritty'",
+#     "100:class_g = 'i3lock'",
+#     "90:class_g = 'thunderbird'",
+#     "90:class_g = 'Spotify'",
+#     "85:class_g = 'steam'"
+# ];
+
+# # blur
+# blur-background = true;
+# blur-method = "dual_kawase";
+# blur-strength = 4;
+# blur-background-exclude = [
+#     "window_type = 'menu'",
+#     "window_type = 'dropdown_menu'",
+#     "window_type = 'popup_menu'",
+#     "window_type = 'tooltip'"
+# ];
