--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -29,10 +29,12 @@ exec --no-startup-id i3-msg 'exec firefox --new-window https://online.cdu.edu.au
 
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.7' --title "secondary" --command sh -c 'btop; exec bash'
 exec --no-startup-id discord
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.8' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.8' --title "notes" -e bash -c "cd ~/Documents/notes && exec bash" 
 
 assign [class="discord"] workspace 11
 for_window [class="Alacritty" title="secondary"] move to workspace 11
+for_window [class="Alacritty" title="notes"] move to workspace 11
 
 exec --no-startup-id ~/bin/.local/scripts/workspace-startup-arrangement
