--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -107,5 +107,5 @@ bindsym Mod4+d exec ~/bin/.local/scripts/hide-desktop
 # enable/disable picom
 bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 
-# open nautilus
-bindsym $mod+n exec nautilus
+# open thunar
+bindsym $mod+n exec thunar
