--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -1,31 +1,27 @@
 exec --no-startup-id alacritty --title "nvim" --command nvim
 
-# Workspace 1: Main
+# Workspace 1: Terminal
 exec --no-startup-id alacritty --title "primary" 
 
-# Workspace 2: Terminal with Browser
+# Workspace 2: Browser
 exec --no-startup-id firefox --new-window google.com
 
 # Workspace 3: Email Clients in Chrome
 exec --no-startup-id thunderbird
 assign [class="thunderbird"] workspace 3
 
-# Workspace 4: Spotify
+# Workspace 4: Music
 exec --no-startup-id spotify
 exec --no-startup-id alacritty --title "cava" --command sh -c 'cava; exec bash'
 
 assign [class="Spotify"] workspace 4
 
 for_window [class="Alacritty" title="cava"] move to workspace 4
-for_window [class="Spotify"] move container to up
 
 # Workspace 5: Games
 exec --no-startup-id steam
 assign [class="steam"] workspace 5
 assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
-
-# Workspace 10: Units
-exec --no-startup-id i3-msg 'exec firefox --new-window https://online.cdu.edu.au/ultra/course'
 
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
