--- a/i3/config
+++ b/i3/config
@@ -67,6 +67,11 @@ exec_always --no-startup-id redshift -O 3800 -P
 # add gaps
 gaps inner 15
 
+# set custom key binding
+exec --no-startup-id xmodmap ~/.config/xmodmap/xmodmap
+#this enables mod-tap behaviour. tap to ESC. hold to CONTROL
+exec --no-startup-id xcape -e 'Control_L=Escape'
+
 # kill steam package install which causes problem on automation
 exec --no-startup-id ~/bin/.local/scripts/kill-steam-package-install
 
@@ -77,6 +82,8 @@ exec --no-startup-id i3-msg 'focus output $pm'
 for_window [class="steam" title="Friends List"] floating enabled
 for_window [class="steam" title="Steam Settings"] floating enabled
 for_window [class="Thunar"] floating enabled
+for_window [class="Thunar"] resize set 1200 1000
+for_window [class="Thunar"] move position center
 for_window [class="gnome-calculator"] floating enabled
 for_window [class="Display-im6.q16"] floating enabled
 for_window [class="feh"] floating enabled
