--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -19,6 +19,7 @@ frame-opacity = 1;
 inactive-opacity-override = false;
 opacity-rule = [
     "100:name = 'Messenger call - Google Chrome'",
+    "95:class_g = 'Thunar'",
     "90:class_g = 'URxvt'",
     "90:class_g = 'Google-chrome'",
     "95:class_g = 'firefox'",
