--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -g @resurrect-strategy-nvim 'session'
 
 # theme
 set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_current_fill "number"
@@ -18,6 +19,7 @@ set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
+set -g status-bg default
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
