--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,33 +14,35 @@ no-fading-openclose = false;
 
 # opacity
 inactive-opacity = 0.9;
-active-opacity = 0.9;
+active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
+
 opacity-rule = [
-    "100:name = 'Messenger call - Google Chrome'",
     "95:class_g = 'Thunar'",
     "90:class_g = 'URxvt'",
-    "90:class_g = 'Google-chrome'",
-    "95:class_g = 'firefox'",
-    "90:class_g = 'discord'",
-    "100:class_g = 'Alacritty'",
-    "100:class_g = 'i3lock'",
-    "90:class_g = 'thunderbird'",
+    "93:class_g = 'thunderbird'",
     "90:class_g = 'Spotify'",
-    "90:class_g = 'steam'"
+    "90:class_g = 'steam'",
+    "100:class_g = 'Google-chrome'",
+    "100:class_g = 'firefox'",
+    "100:class_g = 'discord'",
+    "100:class_g = 'i3lock'",
+    "100:class_g = 'Alacritty'"
 ];
 
 # opacity-rule = [
-#     "80:class_g = 'URxvt'",
-#     "90:class_g = 'Google-chrome' && !focused",
-#     "90:class_g = 'firefox' && !focused",
-#     "85:class_g = 'discord' && !focused",
-#     "100:class_g = 'Alacritty'",
+#     "100:name = 'Messenger call - Google Chrome'",
+#     "95:class_g = 'Thunar'",
+#     "90:class_g = 'URxvt'",
+#     "90:class_g = 'Google-chrome'",
+#     "95:class_g = 'firefox'",
+#     "90:class_g = 'discord'",
 #     "100:class_g = 'i3lock'",
 #     "90:class_g = 'thunderbird'",
 #     "90:class_g = 'Spotify'",
-#     "85:class_g = 'steam'"
+#     "90:class_g = 'steam'",
+#     "100:class_g = 'Alacritty'"
 # ];
 
 # # blur
