--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -12,9 +12,11 @@ assign [class="thunderbird"] workspace 3
 
 # Workspace 4: Music
 exec --no-startup-id spotify
+exec --no-startup-id youtube-music-desktop-app
 exec --no-startup-id alacritty --title "cava" --command sh -c 'cava; exec bash'
 
 assign [class="Spotify"] workspace 4
+assign [class="YouTube Music Desktop App"] workspace 4
 
 for_window [class="Alacritty" title="cava"] move to workspace 4
 
@@ -26,8 +28,8 @@ assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
 exec --no-startup-id discord
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.8' --title "secondary" --command sh -c 'btop; exec bash'
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.8' --title "notes" -e bash -c "cd ~/Documents/sem2/notes && exec bash" 
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "secondary" --command sh -c 'btop; exec bash'
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/sem2/notes && exec bash" 
 
 assign [class="discord"] workspace 11
 for_window [class="Alacritty" title="secondary"] move to workspace 11
