--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -23,6 +23,7 @@ opacity-rule = [
     "90:class_g = 'URxvt'",
     "93:class_g = 'thunderbird'",
     "90:class_g = 'Spotify'",
+    "90:class_g = 'YouTube Music Desktop App'",
     "90:class_g = 'steam'",
     "100:class_g = 'Google-chrome'",
     "100:class_g = 'firefox'",
