--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -89,8 +89,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# open firefox
-bindsym $mod+g exec firefox
+# open browser
+bindsym $mod+g exec brave-browser
 
 # screen lock keybind
 bindsym Control+Mod1+l exec ~/bin/.local/scripts/lock-screen
