--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -4,7 +4,7 @@ exec --no-startup-id alacritty --title "nvim" --command nvim
 exec --no-startup-id alacritty --title "primary" 
 
 # Workspace 2: Browser
-exec --no-startup-id firefox --new-window google.com
+exec --no-startup-id brave-browser --new-window
 
 # Workspace 3: Email Clients in Chrome
 exec --no-startup-id thunderbird
