--- a/i3/rose-pine.conf
+++ b/i3/rose-pine.conf
@@ -22,4 +22,4 @@ client.focused_inactive  $text     $base $text  $subtle    $surface
 client.unfocused         $text     $base $text  $overlay   $overlay
 client.urgent            $text     $base $text  $love      $love
 client.placeholder       $base     $base $text  $overlay   $overlay
-client.background        $base
+client.background        $base                             $overlay   
