--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -26,10 +26,13 @@ opacity-rule = [
     "90:class_g = 'YouTube Music Desktop App'",
     "90:class_g = 'steam'",
     "100:class_g = 'Google-chrome'",
+    "100:class_g = 'Brave-browser'",
     "100:class_g = 'firefox'",
     "100:class_g = 'discord'",
     "100:class_g = 'i3lock'",
-    "100:class_g = 'Alacritty'"
+    "100:class_g = 'Alacritty'",
+    "100:class_g = 'VirtualBox Machine'",
+    "100:class_g = 'VirtualBox Manager'"
 ];
 
 # opacity-rule = [
