--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -29,7 +29,7 @@ assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 exec --no-startup-id google-chrome messenger.com --new-window 
 exec --no-startup-id discord
 exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "secondary" --command sh -c 'btop; exec bash'
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/sem2/notes && exec bash" 
+exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/notes && exec bash" 
 
 assign [class="discord"] workspace 11
 for_window [class="Alacritty" title="secondary"] move to workspace 11
