changes on laptop

--- a/i3_laptop/remap.conf
+++ b/i3_laptop/remap.conf
@@ -1,4 +1,4 @@
-# start a terminal
+# fstart a terminal
 bindsym $mod+Return exec alacritty
 
 # kill focused window
@@ -84,14 +84,17 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# open google chrome
-bindsym $mod+g exec google-chrome
+# open browser
+bindsym $mod+g exec brave-browser
 
 # screen lock keybind
-bindsym Control+Mod1+l exec "i3lock -c 000000"
+bindsym Control+Mod1+l exec "i3lock -e -f -c 000000 && sleep 1 && xset dpms force off"
 
 # snip
 bindsym Mod4+Shift+s exec flameshot gui
+
+# open thunar
+bindsym $mod+n exec thunar
 
 # clipboard history
 bindsym Mod4+v exec copyq show
