--- a/i3_laptop/config
+++ b/i3_laptop/config
@@ -1,5 +1,5 @@
 include $HOME/.config/i3/workspaces.conf
-include $HOME/.config/i3/startup.conf
+# include $HOME/.config/i3/startup.conf
 include $HOME/.config/i3/remap.conf
 include $HOME/.config/i3/rose-pine.conf
 
@@ -23,13 +23,13 @@ default_floating_border normal
 exec_always --no-startup-id feh --bg-fill ~/Documents/background/cherry_blossom_flipped.png
 
 # font 
-font pango:monospace 10
+font pango:CaskaydiaMonoNerdFont 10
 
 # Start XDG autostart .desktop files using dex. See also
 exec --no-startup-id dex --autostart --environment i3
 
 # Uses xss-lock to manage screen locking before the system suspends and uses i3lock to lock the screen
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -c -e -f 000000 --nofork
 
 # use nm-applet to manage network with GUI
 exec --no-startup-id nm-applet
@@ -45,14 +45,16 @@ tiling_drag modifier titlebar
 focus_follows_mouse no 
 
 # status bar
-exec_always --no-startup-id killall polybar
-exec_always --no-startup-id ~/.config/polybar/launch
+exec_always --no-startup-id killall polybar; polybar 
 
 # auto lock screen
-exec --no-startup-id xautolock -detectsleep -time 1800 -locker "i3lock -c 000000"
+exec --no-startup-id xautolock -detectsleep -time 1800 -locker "i3lock -c -e -f 000000"
 
 # night light
 exec_always --no-startup-id redshift -O 4800 -P
+
+# set custom key binding
+exec --no-startup-id ~/bin/.local/scripts/key-remap
 
 # add gaps
 gaps inner 15
@@ -60,7 +62,9 @@ gaps inner 15
 # floating windows
 for_window [class="steam" title="Friends List"] floating enabled
 for_window [class="steam" title="Steam Settings"] floating enabled
-for_window [class="org.gnome.Nautilus"] floating enabled
+for_window [class="Thunar"] floating enabled
+for_window [class="Thunar"] resize set 1200 1000
+for_window [class="Thunar"] move position center
 for_window [class="gnome-calculator"] floating enabled
 for_window [class="Display-im6.q16"] floating enabled
 for_window [class="feh"] floating enabled
@@ -70,9 +74,6 @@ for_window [class="Pavucontrol"] floating enabled
 for_window [class="copyq"] floating enabled
 for_window [class="org.gnome.clocks"] floating enabled
 for_window [class="gnome-calendar"] floating enabled
-
-# kill steam package install which causes problem on automation
-exec --no-startup-id ~/bin/.local/scripts/kill-steam-package-install
-
-# focus on primary monitor when reloading
-exec_always --no-startup-id i3-msg 'focus output $pm'
+for_window [class="Blueman-manager"] floating enabled
+for_window [class="PacketTracer"] floating enabled
+for_window [class="firefox" title="Library"] floating enabled
