--- a/polybar_laptop/config.ini
+++ b/polybar_laptop/config.ini
@@ -36,8 +36,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "monospace:pixelsize=13;0"
-font-1 = "Ubuntu Mono Nerd Font:pixelsize=13;0"
+font-0 = "CaskaydiaMonoNerdFont:pixelsize=13;0"
 
 modules-left = i3
 modules-right = systray cpu memory wlan pulseaudio date time battery
@@ -162,9 +161,12 @@ poll-interval = 5
 format-charging = <ramp-capacity>  <label-charging>
 label-charging = %percentage%%
 
-format-discharging = <ramp-capacity>  <label-discharging>
+format-discharging = <ramp-capacity>  <label-discharging> 
 label-discharging = %percentage%%
 format-discharging-foreground = ${colors.primary}
+
+label-full =   %percentage%%
+label-low =   %percentage%%
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
