--- a/i3/remap.conf
+++ b/i3/remap.conf
@@ -109,3 +109,6 @@ bindsym $mod+p exec ~/bin/.local/scripts/toggle-picom
 
 # open thunar
 bindsym $mod+n exec thunar
+
+# open notes
+bindsym $mod+i exec alacritty -o 'window.opacity=1' --title "notes" -e bash -c "cd ~/Documents/notes &&  vim ." 
