--- a/i3/startup.conf
+++ b/i3/startup.conf
@@ -17,15 +17,15 @@ exec --no-startup-id youtube-music-desktop-app
 assign [class="Spotify"] workspace 4
 assign [class="YouTube Music Desktop App"] workspace 4
 
-# # Workspace 5: Games
-# exec --no-startup-id steam
-# assign [class="steam"] workspace 5
-# assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
+# Workspace 5: Games
+exec --no-startup-id steam
+assign [class="steam"] workspace 5
+assign [class="Gnome-terminal" title="Evaluating dependencies"] workspace 5
 
 # Workspace 11: Secondary
 exec --no-startup-id google-chrome messenger.com --new-window 
 exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "secondary" --command sh -c 'btop; exec bash'
-exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/notes && exec bash" 
+# exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "notes" -e bash -c "cd ~/Documents/notes && exec bash" 
 exec --no-startup-id alacritty -o 'font.size=12' -o 'window.opacity=0.85' --title "cava" --command sh -c 'cava; exec bash'
 
 for_window [class="Alacritty" title="secondary"] move to workspace 11
